# e-commerce-api

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: db.py  main.py  middleware.py  models.py  schemas.py  security.py
app/api/: dependencies.py
app/api/endpoints/: users.py
app/api/v1/endpoints/: auth.py  cart.py  orders.py  products.py  users.py  webhooks.py
app/core/: config.py  security.py
app/models/: cart.py  order.py  product.py  user.py
app/repositories/: cart_repository.py  order_repository.py  product_repository.py  user_repository.py
app/schemas/: cart.py  order.py  product.py  user.py
app/services/: auth_service.py  cart_service.py  order_service.py  product_service.py
